--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "firebase": "^8.2.9",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-drag-slider": "^0.1.5",
+    "react-draggable": "^4.4.3",
     "react-firebase-hooks": "^2.2.0",
     "react-onclickoutside": "^6.10.0",
     "react-redux": "^7.2.2",
